[project]
name = "daylog"
version = "1.1.0"
description = "A timesheet implemented through a simple textfile format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "progressbar2>=4.5.0",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
